@@ -20,6 +20,9 @@ import android.compat.annotation.UnsupportedAppUsage;
 import android.system.Os;
 import android.system.OsConstants;
 
+import java.lang.invoke.MethodHandles;
+import java.lang.invoke.VarHandle;
+import java.lang.ref.Cleaner;
 import java.lang.ref.FinalizerReference;
 import java.lang.ref.Reference;
 import java.lang.ref.ReferenceQueue;
@@ -30,6 +33,8 @@ import libcore.util.EmptyArray;
 
 import dalvik.system.VMRuntime;
 import dalvik.system.VMDebug;
+
+import jdk.internal.ref.CleanerImpl;
 
 /**
  * Calls Object.finalize() on objects in the finalizer reference queue. The VM
@@ -56,13 +61,13 @@ public final class Daemons {
             FinalizerDaemon.INSTANCE,
             FinalizerWatchdogDaemon.INSTANCE,
     };
-    private static final CountDownLatch POST_ZYGOTE_START_LATCH = new CountDownLatch(DAEMONS.length);
-    private static final CountDownLatch PRE_ZYGOTE_START_LATCH = new CountDownLatch(DAEMONS.length);
+    private static CountDownLatch zygoteStartLatch;
 
     private static boolean postZygoteFork = false;
 
     @UnsupportedAppUsage
     public static void start() {
+        zygoteStartLatch = new CountDownLatch(DAEMONS.length);
         for (Daemon daemon : DAEMONS) {
             daemon.start();
         }
@@ -70,9 +75,7 @@ public final class Daemons {
 
     public static void startPostZygoteFork() {
         postZygoteFork = true;
-        for (Daemon daemon : DAEMONS) {
-            daemon.startPostZygoteFork();
-        }
+        start();
     }
 
     @UnsupportedAppUsage
@@ -83,11 +86,7 @@ public final class Daemons {
     }
 
     private static void waitForDaemonStart() throws Exception {
-        if (postZygoteFork) {
-            POST_ZYGOTE_START_LATCH.await();
-        } else {
-            PRE_ZYGOTE_START_LATCH.await();
-        }
+        zygoteStartLatch.await();
     }
 
     /**
@@ -99,7 +98,6 @@ public final class Daemons {
         @UnsupportedAppUsage
         private Thread thread;
         private String name;
-        private boolean postZygoteFork;
 
         protected Daemon(String name) {
             this.name = name;
@@ -107,11 +105,6 @@ public final class Daemons {
 
         @UnsupportedAppUsage
         public synchronized void start() {
-            startInternal();
-        }
-
-        public synchronized void startPostZygoteFork() {
-            postZygoteFork = true;
             startInternal();
         }
 
@@ -132,20 +125,26 @@ public final class Daemons {
                 // priority. We (may) use a native priority that doesn't have a corresponding
                 // java.lang.Thread-level priority (native priorities are more coarse-grained.)
                 VMRuntime.getRuntime().setSystemDaemonThreadPriority();
-                POST_ZYGOTE_START_LATCH.countDown();
-            } else {
-                PRE_ZYGOTE_START_LATCH.countDown();
             }
+            zygoteStartLatch.countDown();
             try {
                 runInternal();
+                // This thread is about to exit, and we may have to wait for it to do so.
+                // Terminate the underlying system thread as quickly as possible.
+                // Mirroring setSystemDaemonThreadPriority, we only touch the native priority,
+                // bypassing the rest of setPriority().
+                Thread.currentThread().setPriority0(Thread.MAX_PRIORITY);
             } catch (Throwable ex) {
-                // Should never happen, but may not o.w. get reported, e.g. in zygote.
+                // Usually caught in runInternal. May not o.w. get reported, e.g. in zygote.
                 // Risk logging redundantly, rather than losing it.
                 System.logE("Uncaught exception in system thread " + name, ex);
                 throw ex;
             }
         }
 
+        /*
+         * Do the actual work. Returns normally when asked to stop.
+         */
         public abstract void runInternal();
 
         /**
@@ -174,6 +173,9 @@ public final class Daemons {
          */
         @UnsupportedAppUsage
         public void stop() {
+            // This can be called on shutdown with the GC already disabled.
+            // Allocation either here or while handling the request in the
+            // daemon thread should be minimized.
             Thread threadToStop;
             synchronized (this) {
                 threadToStop = thread;
@@ -203,6 +205,17 @@ public final class Daemons {
         }
     }
 
+    // Allocate these strings on start-up.
+    // Don't declare them private, to minimize chances that the compiler can defer allocation.
+    /**
+     * @hide
+     */
+    public static final String FD_OOM_MESSAGE = "Ignoring unexpected OOME in FinalizerDaemon";
+    /**
+     * @hide
+     */
+    public static final String RQD_OOM_MESSAGE = "Ignoring unexpected OOME in ReferenceQueueDaemon";
+
     /**
      * This heap management thread moves elements from the garbage collector's
      * pending list to the managed reference queue.
@@ -220,14 +233,20 @@ public final class Daemons {
 
         @Override public void runInternal() {
             FinalizerWatchdogDaemon.INSTANCE.monitoringNeeded(FinalizerWatchdogDaemon.RQ_DAEMON);
+
+            // Call once early to reduce later allocation, and hence chance of OOMEs.
+            FinalizerWatchdogDaemon.INSTANCE.resetTimeouts();
+
             while (isRunning()) {
                 Reference<?> list;
                 try {
                     synchronized (ReferenceQueue.class) {
                         if (ReferenceQueue.unenqueued == null) {
-                            progressCounter.incrementAndGet();
                             FinalizerWatchdogDaemon.INSTANCE.monitoringNotNeeded(
                                     FinalizerWatchdogDaemon.RQ_DAEMON);
+                            // Increment after above call. If watchdog saw it active, it should see
+                            // the counter update.
+                            progressCounter.incrementAndGet();
                             do {
                                ReferenceQueue.class.wait();
                             } while (ReferenceQueue.unenqueued == null);
@@ -238,18 +257,21 @@ public final class Daemons {
                         list = ReferenceQueue.unenqueued;
                         ReferenceQueue.unenqueued = null;
                     }
+                    ReferenceQueue.enqueuePending(list, progressCounter);
+                    FinalizerWatchdogDaemon.INSTANCE.resetTimeouts();
                 } catch (InterruptedException e) {
-                    continue;
-                } catch (OutOfMemoryError e) {
-                    continue;
+                    // Happens when we are asked to stop.
+                } catch (OutOfMemoryError ignored) {
+                    // Very unlikely. Cleaner.clean OOMEs are caught elsewhere, and nothing else
+                    // should allocate regularly. Could result in enqueuePending dropping
+                    // references. Does occur in tests that run out of memory.
+                    System.logW(RQD_OOM_MESSAGE);
                 }
-                ReferenceQueue.enqueuePending(list, progressCounter);
-                FinalizerWatchdogDaemon.INSTANCE.resetTimeouts();
             }
         }
 
-        ReferenceQueue currentlyProcessing() {
-          return ReferenceQueue.getCurrentQueue();
+        Object currentlyProcessing() {
+          return ReferenceQueue.getCurrentTarget();
         }
     }
 
@@ -261,6 +283,13 @@ public final class Daemons {
         // Object (not reference!) being finalized. Accesses may race!
         @UnsupportedAppUsage
         private Object finalizingObject = null;
+
+        // Track if we are currently logging an exception. We don't want to time out
+        // in the middle.
+        public static int NONE = 0;
+        public static int LOGGING = 1;
+        public static int TIMED_OUT = 2;
+        public volatile int exceptionLoggingState = NONE;
 
         FinalizerDaemon() {
             super("FinalizerDaemon");
@@ -287,26 +316,48 @@ public final class Daemons {
                 try {
                     // Use non-blocking poll to avoid FinalizerWatchdogDaemon communication
                     // when busy.
-                    FinalizerReference<?> finalizingReference = (FinalizerReference<?>)queue.poll();
-                    if (finalizingReference != null) {
-                        finalizingObject = finalizingReference.get();
+                    Object nextReference = queue.poll();
+                    if (nextReference != null) {
                         progressCounter.lazySet(++localProgressCounter);
+                        processReference(nextReference);
                     } else {
                         finalizingObject = null;
-                        progressCounter.lazySet(++localProgressCounter);
                         // Slow path; block.
                         FinalizerWatchdogDaemon.INSTANCE.monitoringNotNeeded(
                                 FinalizerWatchdogDaemon.FINALIZER_DAEMON);
-                        finalizingReference = (FinalizerReference<?>)queue.remove();
-                        finalizingObject = finalizingReference.get();
+                        // Increment after above call. If watchdog saw it active, it should see
+                        // the counter update.
+                        progressCounter.set(++localProgressCounter);
+                        nextReference = queue.remove();
                         progressCounter.set(++localProgressCounter);
                         FinalizerWatchdogDaemon.INSTANCE.monitoringNeeded(
                                 FinalizerWatchdogDaemon.FINALIZER_DAEMON);
+                        processReference(nextReference);
                     }
-                    doFinalize(finalizingReference);
-                } catch (InterruptedException ignored) {
+                } catch (InterruptedException e) {
+                    // Happens when we are asked to stop.
                 } catch (OutOfMemoryError ignored) {
+                    // An  OOME here is unlikely to be actionable. Bravely/foolishly continue.
+                    System.logW(FD_OOM_MESSAGE);
                 }
+            }
+        }
+
+        private void processReference(Object ref) {
+            if (ref instanceof FinalizerReference finalizingReference) {
+                finalizingObject = finalizingReference.get();
+                try {
+                    doFinalize(finalizingReference);
+                } finally {
+                    // Make really sure we delay any PhantomReference enqueueing until we are
+                    // really done. Possibly redundant, but the rules are complex.
+                    Reference.reachabilityFence(finalizingObject);
+                }
+            } else if (ref instanceof Cleaner.Cleanable cleanableReference) {
+                finalizingObject = cleanableReference;
+                doClean(cleanableReference);
+            } else {
+                throw new AssertionError("Unknown class was placed into queue: " + ref);
             }
         }
 
@@ -319,9 +370,25 @@ public final class Daemons {
                 object.finalize();
             } catch (Throwable ex) {
                 // The RI silently swallows these, but Android has always logged.
+                exceptionLoggingState = LOGGING;
                 System.logE("Uncaught exception thrown by finalizer", ex);
+                if (exceptionLoggingState == TIMED_OUT) {
+                  // We would have timed out. Attempt to crash the process here to leave a trace.
+                  throw new AssertionError("Timed out logging finalizer exception", ex);
+                }
             } finally {
                 // Done finalizing, stop holding the object as live.
+                finalizingObject = null;
+                exceptionLoggingState = NONE;
+            }
+        }
+
+        private void doClean(Cleaner.Cleanable cleanable) {
+            try {
+                cleanable.clean();
+                // We only get here for SystemCleaner, and are thus not constrained to ignore
+                // exceptions/errors.
+            } finally {
                 finalizingObject = null;
             }
         }
@@ -342,6 +409,18 @@ public final class Daemons {
 
         @UnsupportedAppUsage
         private static final FinalizerWatchdogDaemon INSTANCE = new FinalizerWatchdogDaemon();
+        private static final VarHandle VH_ACTION;
+        static {
+            try {
+                VH_ACTION = MethodHandles
+                        .privateLookupIn(
+                                CleanerImpl.PhantomCleanableRef.class, MethodHandles.lookup())
+                        .findVarHandle(
+                                CleanerImpl.PhantomCleanableRef.class, "action", Runnable.class);
+            } catch (NoSuchFieldException | IllegalAccessException e) {
+                throw new AssertionError("PhantomCleanableRef should have action field", e);
+            }
+        }
 
         private int activeWatchees;  // Only synchronized accesses.
 
@@ -463,85 +542,119 @@ public final class Daemons {
                 // Temporary app backward compatibility. Remove eventually.
                 MAX_FINALIZE_NANOS = finalizerTimeoutNs;
             }
-            boolean monitorFinalizer = false;
-            int finalizerStartCount = 0;
-            if (isActive(FINALIZER_DAEMON)) {
-                monitorFinalizer = true;
-                finalizerStartCount = FinalizerDaemon.INSTANCE.progressCounter.get();
-            }
-            boolean monitorRefQueue = false;
-            int refQueueStartCount = 0;
-            if (isActive(RQ_DAEMON)) {
-                monitorRefQueue = true;
-                refQueueStartCount = ReferenceQueueDaemon.INSTANCE.progressCounter.get();
-            }
+            // Read the counter before we read the "active" state the first time, and after
+            // we read it the last time, to guarantee that if the state was ever inactive,
+            // we'll see a changed counter.
+            int finalizerStartCount = FinalizerDaemon.INSTANCE.progressCounter.get();
+            boolean monitorFinalizer = isActive(FINALIZER_DAEMON);
+            int refQueueStartCount = ReferenceQueueDaemon.INSTANCE.progressCounter.get();
+            boolean monitorRefQueue = isActive(RQ_DAEMON);
             // Avoid remembering object being finalized, so as not to keep it alive.
             final long startMillis = System.currentTimeMillis();
             final long startNanos = System.nanoTime();
 
-            if (!sleepForNanos(finalizerTimeoutNs)) {
-                // Don't report possibly spurious timeout if we are interrupted.
-                return null;
-            }
-            if (FinalizerDaemon.INSTANCE.progressCounter.get() == finalizerStartCount
-                && monitorFinalizer && isActive(FINALIZER_DAEMON)) {
-                // We assume that only remove() and doFinalize() may take time comparable to the
-                // finalizer timeout.
-                // We observed neither the effect of the monitoringNotNeeded() nor the increment
-                // preceding a later wakeUp. Any remove() call by the FinalizerDaemon during our
-                // sleep interval must have been followed by a monitoringNeeded() call before we
-                // checked activeCallees.  But then we would have seen the counter increment.
-                // Thus there cannot have been such a remove() call.
-                // The FinalizerDaemon must not have progressed (from either the beginning or the
-                // last progressCounter increment) to either the next increment or
-                // monitoringNotNeeded() call.
-                // Thus we must have taken essentially the whole finalizerTimeoutMs in a single
-                // doFinalize() call.  Thus it's OK to time out.  finalizingObject was set just
-                // before the counter increment, which preceded the doFinalize() call.  Thus we
-                // are guaranteed to get the correct finalizing value below, unless doFinalize()
-                // just finished as we were timing out, in which case we may get null or a later
-                // one.  In this last case, we are very likely to discard it below.
-                Object finalizing = FinalizerDaemon.INSTANCE.finalizingObject;
-                System.logW("Watchdog: Considering throwing exception",
-                    finalizerTimeoutException(finalizing));
-                System.logW("Watchdog: Millis elapsed so far: "
-                    + (System.currentTimeMillis() - startMillis));
-                System.logW("Watchdog: Nanos so far: " + (System.nanoTime() - startNanos));
-                sleepForNanos(500 * NANOS_PER_MILLI);
-                // Recheck to make it even less likely we report the wrong finalizing object in
-                // the case which a very slow finalization just finished as we were timing out.
-                if (isActive(FINALIZER_DAEMON)
-                        && FinalizerDaemon.INSTANCE.progressCounter.get() == finalizerStartCount) {
-                    System.logE("Was finalizing " + finalizing + ", now finalizing "
-                        + FinalizerDaemon.INSTANCE.finalizingObject);
-                    System.logE("Total elapsed millis: "
-                        + (System.currentTimeMillis() - startMillis));
-                    System.logE("Total nanos: " + (System.nanoTime() - startNanos));
-                    return finalizerTimeoutException(finalizing);
+            // Rather than just sleeping for finalizerTimeoutNs and checking whether we made
+            // progress, we sleep repeatedly. This means that if our process makes no progress,
+            // e.g. because it is frozen, the watchdog also won't, making it less likely we will
+            // spuriously time out. It does mean that in the normal case, we will go to sleep
+            // and wake up twice per timeout period, rather than once.
+            final int NUM_WAKEUPS = 5;
+            for (int i = 1; i <= NUM_WAKEUPS; ++i) {
+                if (!sleepForNanos(finalizerTimeoutNs / NUM_WAKEUPS)) {
+                    // Don't report possibly spurious timeout if we are interrupted.
+                    return null;
+                }
+                if (monitorFinalizer && isActive(FINALIZER_DAEMON)
+                    && FinalizerDaemon.INSTANCE.progressCounter.get() == finalizerStartCount) {
+                    // Still working on same finalizer or Java 9 Cleaner.
+                    continue;
+                }
+                if (monitorRefQueue && isActive(RQ_DAEMON)
+                    && ReferenceQueueDaemon.INSTANCE.progressCounter.get() == refQueueStartCount) {
+                    // Still working on same ReferenceQueue or sun.misc.Cleaner.
+                    continue;
+                }
+                // Everything that could make progress, already did. Just sleep for the rest of the
+                // timeout interval.
+                if (i < NUM_WAKEUPS) {
+                    sleepForNanos((finalizerTimeoutNs  / NUM_WAKEUPS) * (NUM_WAKEUPS - i));
+                    return null;
                 }
             }
-            if (ReferenceQueueDaemon.INSTANCE.progressCounter.get() == refQueueStartCount
-                && monitorRefQueue && isActive(RQ_DAEMON)) {
+            // Either a state change to inactive, or a task completion would have caused us to see a
+            // counter change. Thus at least one of the daemons appears stuck.
+            if (monitorFinalizer && isActive(FINALIZER_DAEMON)
+                && FinalizerDaemon.INSTANCE.progressCounter.get() == finalizerStartCount) {
+                if (FinalizerDaemon.INSTANCE.exceptionLoggingState == FinalizerDaemon.LOGGING) {
+                    // Try to let it finish and crash. We will time out if we get here again.
+                    FinalizerDaemon.INSTANCE.exceptionLoggingState = FinalizerDaemon.TIMED_OUT;
+                }
+                // The finalizingObject field was set just before the counter increment, which
+                // preceded the doFinalize() or doClean() call.  Thus we are guaranteed to get the
+                // correct finalizing value below, unless doFinalize() just finished as we were
+                // timing out, in which case we may get null or a later one.
+                Object finalizing = FinalizerDaemon.INSTANCE.finalizingObject;
+                System.logE("Was finalizing " + finalizingObjectAsString(finalizing)
+                    + ", now finalizing "
+                    + finalizingObjectAsString(FinalizerDaemon.INSTANCE.finalizingObject));
+                // Print both time of day and monotonic time differences:
+                System.logE("Total elapsed millis: "
+                    + (System.currentTimeMillis() - startMillis));
+                System.logE("Total elapsed nanos: " + (System.nanoTime() - startNanos));
+                return finalizerTimeoutException(finalizing);
+            }
+            if (monitorRefQueue && isActive(RQ_DAEMON)
+                && ReferenceQueueDaemon.INSTANCE.progressCounter.get() == refQueueStartCount) {
+                // Report RQD timeouts only if they occur repeatedly.
+                // TODO: Consider changing that, but we have historically been more tolerant here,
+                // since we may not increment the reference counter for every processed queue
+                // element.
+                Object current = ReferenceQueueDaemon.INSTANCE.currentlyProcessing();
+                String currentTarget = current == null ? "unknown" : current.toString();
+                System.logE("ReferenceQueueDaemon timed out while targeting " + currentTarget
+                        + ". Total nanos: " + (System.nanoTime() - startNanos));
                 if (observedReferenceQueueTimeouts.incrementAndGet()
                         > TOLERATED_REFERENCE_QUEUE_TIMEOUTS) {
-                    return refQueueTimeoutException(
-                            ReferenceQueueDaemon.INSTANCE.currentlyProcessing());
+                    return refQueueTimeoutException(currentTarget);
                 }
             }
             return null;
         }
 
         private static TimeoutException finalizerTimeoutException(Object object) {
-            String message = object.getClass().getName() + ".finalize() timed out after "
-                    + VMRuntime.getRuntime().getFinalizerTimeoutMs() / 1000 + " seconds";
-            TimeoutException syntheticException = new TimeoutException(message);
+            if (object == null) {
+                return new TimeoutException("Unknown finalizer timed out");
+            }
+            StringBuilder messageBuilder = new StringBuilder();
+
+            if (object instanceof Cleaner.Cleanable) {
+                messageBuilder.append(VH_ACTION.get(object).getClass().getName());
+            } else {
+                messageBuilder.append(object.getClass().getName()).append(".finalize()");
+            }
+
+            messageBuilder.append(" timed out after ")
+                    .append(VMRuntime.getRuntime().getFinalizerTimeoutMs() / 1000)
+                    .append(" seconds");
+            TimeoutException syntheticException = new TimeoutException(messageBuilder.toString());
             // We use the stack from where finalize() was running to show where it was stuck.
             syntheticException.setStackTrace(FinalizerDaemon.INSTANCE.getStackTrace());
             return syntheticException;
         }
 
-        private static TimeoutException refQueueTimeoutException(ReferenceQueue rq) {
-            String message = "ReferenceQueueDaemon timed out while targeting " + rq;
+        private static String finalizingObjectAsString(Object obj) {
+            if (obj == null) {
+                return "unknown";
+            }
+            if (obj instanceof Cleaner.Cleanable) {
+                return VH_ACTION.get(obj).toString();
+            } else {
+                return obj.toString();
+            }
+        }
+
+        private static TimeoutException refQueueTimeoutException(String target) {
+            String message = "ReferenceQueueDaemon timed out while targeting " + target;
             return new TimeoutException(message);
         }
 
